2014-09-08  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (prepare_desired_row): When MODE_LINE_P is zero,
	always make sure the marginal areas of the row are in sync with
	what the window wants.  (Bug#18419)

	* data.c (set_internal): Use assq_no_quit, not Fassq, to find an
	existing binding of a variable, to avoid silently aborting
	commands that use specbind.  (Bug#18331)

2014-09-07  Paul Eggert  <eggert@cs.ucla.edu>

	Fix bug uncovered by changing alloca to auto buffer (Bug#18410).
	* coding.c (growable_destination): New function.
	(produce_chars): Use it for sanity checks.  Do not fiddle with
	dst_end if the source and destination are both nil, as it's
	the caller's responsibility to avoid overlap.
	* keyboard.c (read_decoded_event_from_main_queue):
	The destination must be MAX_MULTIBYTE_LENGTH times the max source
	length, not 4 times, to prevent decode_coding_c_string from trying
	to reallocate a destination.  This removes the need for the FIXME.

	* callproc.c (exec_failed) [DOS_NT]: Define a dummy.
	All callers simplified.  Add a comment about exec_failed, vfork,
	and alloca.

	Adjust drag-and-drop fix when window is above top (Bug#18303).
	* xselect.c (x_fill_property_data): Don't let sign bit of negative
	XCDR bleed into XCAR's encoded value.  Improve checks for
	out-of-range data while we're at it.

2014-09-07  Jan Djärv  <jan.h.d@swipnet.se>

	* xselect.c (x_fill_property_data): Handle negative XCDR when data
	is CONSP (Bug#18303).

2014-09-07  Eli Zaretskii  <eliz@gnu.org>

	* callproc.c (child_setup) [WINDOWSNT]: Don't call exec_failed if
	'alloca' gets passed arguments larger than MAX_ALLOCA.

	* font.c (MAX): Define if not defined elsewhere.

2014-09-07  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (read_decoded_event_from_main_queue): Reinstitute alloca
	here for destination buffer, to work around what appears to be a
	bug in decode_coding_c_string when the source and destination are
	both C strings.
